fix: armor pickup, parkour per-dimension, starvation flee cap, target oscillation